--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "yusharnadi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
